--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -15,3 +15,17 @@
         tenancy: default
         state: "{{state}}"
       register: vpcout
+      - debug:
+        var: vpcout
+
+    - name: create Public Subnet 1 in Zone1
+          ec2_vpc_subnet:
+            vpc_id: "{{vpcout.vpc.id}}"
+            region: "{{ region }}"
+            az: "{{ zone1 }}"
+            state: "{{state}}"
+            cidr: "{{ PubSub1Cidr }}"
+            map_public: yes
+            resource_tags:
+              Name: ash-pubsub1
+          register: ash-pubsub1_out
