--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -28,4 +28,4 @@
         map_public: yes
         resource_tags:
           Name: ash-pubsub1
-      register: ash-pubsub1_out
+      register: pubsub1_out
