--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -15,8 +15,8 @@
         tenancy: default
         state: "{{state}}"
       register: vpcout
-    - debug:
-        var: vpcout
+#   - debug:
+#       var: vpcout
 
     - name: create Public Subnet 1 in Zone1
       ec2_vpc_subnet:
@@ -29,3 +29,25 @@
         resource_tags:
           Name: ash-pubsub1
       register: pubsub1_out
+    - name: create Public Subnet 2 in Zone1
+      ec2_vpc_subnet:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{ region }}"
+        az: "{{ zone2 }}"
+        state: "{{state}}"
+        cidr: "{{ PubSub2Cidr }}"
+        map_public: yes
+        resource_tags:
+          Name: ash-pubsub2
+      register: pubsub2_out
+    - name: create Public Subnet 3 in Zone1
+      ec2_vpc_subnet:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{ region }}"
+        az: "{{ zone3 }}"
+        state: "{{state}}"
+        cidr: "{{ PubSub3Cidr }}"
+        map_public: yes
+        resource_tags:
+          Name: ash-pubsub3
+      register: pubsub3_out
