--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -51,3 +51,38 @@
         resource_tags:
           Name: ash-pubsub3
       register: pubsub3_out
+
+
+    - name: create Private Subnet 1 in Zone1
+      ec2_vpc_subnet:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{ region }}"
+        az: "{{ zone1 }}"
+        state: "{{state}}"
+        cidr: "{{ PrivSub1Cidr }}"
+        map_public: yes
+        resource_tags:
+          Name: ash-privsub1
+      register: privsub1_out
+    - name: create Private Subnet 2 in Zone1
+      ec2_vpc_subnet:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{ region }}"
+        az: "{{ zone2 }}"
+        state: "{{state}}"
+        cidr: "{{ PrivSub2Cidr }}"
+        map_public: yes
+        resource_tags:
+          Name: ash-privsub2
+      register: privsub2_out
+    - name: create Private Subnet 3 in Zone1
+      ec2_vpc_subnet:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{ region }}"
+        az: "{{ zone3 }}"
+        state: "{{state}}"
+        cidr: "{{ PrivSub3Cidr }}"
+        map_public: yes
+        resource_tags:
+          Name: ash-privsub3
+      register: privsub3_out
