--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -86,3 +86,12 @@
         resource_tags:
           Name: ash-privsub3
       register: privsub3_out
+
+    - name: Internet Gateway Setup
+      ec2_vpc_igw:
+        vpc_id: "{{ vpcout.vpc.id }}"
+        region: "{{ region }}"
+        state: "{{state}}"
+        resource_tags:
+          Name: ash_IGW
+      register: igw_out
